[gd_scene load_steps=16 format=3 uid="uid://dn78rt0u5v81o"]

[ext_resource type="Script" path="res://Scripts/Gameplay/Match_Visualization_Client.gd" id="1_o02hm"]
[ext_resource type="PackedScene" uid="uid://biaht4ysa4apn" path="res://Scenes/UI/Avatar.tscn" id="2_pe3gp"]
[ext_resource type="Texture2D" uid="uid://d2wh4luurk44o" path="res://Images/icon2.svg" id="3_ct1c8"]
[ext_resource type="TileSet" uid="uid://dbqado2qd3j66" path="res://Scenes/UnitPath.tres" id="3_igebr"]
[ext_resource type="Texture2D" uid="uid://c5trgq5jumeji" path="res://Isometric/Road/beach.png" id="4_6ryff"]
[ext_resource type="Script" path="res://Scenes/unit_overlay.gd" id="5_60abn"]
[ext_resource type="PackedScene" uid="uid://cvffdvofpp8ng" path="res://Scenes/Match_Visualization_CardList.tscn" id="5_sm45i"]
[ext_resource type="PackedScene" uid="uid://bh5glfdo8qqsu" path="res://Scenes/Match_Visualization_SkillList.tscn" id="6_35quf"]
[ext_resource type="PackedScene" uid="uid://8v0qmrym53ag" path="res://Scenes/UI/cursor.tscn" id="6_v0277"]
[ext_resource type="PackedScene" uid="uid://8ev66thhrera" path="res://Scenes/Match_Visualization_EquipmentList.tscn" id="7_1g4i5"]
[ext_resource type="Script" path="res://Scripts/UI/Camera_Script.gd" id="7_3jsn3"]
[ext_resource type="PackedScene" uid="uid://b8shsa4j5s6j8" path="res://Scenes/Match_Visualization_Player.tscn" id="9_et02w"]
[ext_resource type="PackedScene" uid="uid://tklqmuavjeb7" path="res://Scenes/EffecterVisualizerFull.tscn" id="13_60hkt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1kkav"]
resource_name = "Test"
texture = ExtResource("4_6ryff")
texture_region_size = Vector2i(100, 65)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_w8plm"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(100, 50)
sources/1 = SubResource("TileSetAtlasSource_1kkav")

[node name="MainRefactor" type="Node"]

[node name="Board" type="Node2D" parent="." node_paths=PackedStringArray("ModeUI", "MoveUI", "CardUI", "AttackUI", "InteractUI", "SkillUI", "EquipmentUI", "ObserveUI", "effecterVisualizer", "playerInfoDisplayHolder")]
y_sort_enabled = true
script = ExtResource("1_o02hm")
ModeUI = NodePath("../CanvasLayer/Control/VBoxContainer")
MoveUI = NodePath("../CanvasLayer/Control/VBoxContainer/Control/MoveUI")
CardUI = NodePath("../CanvasLayer/Control/VBoxContainer/Control/CardUI")
AttackUI = NodePath("../CanvasLayer/Control/VBoxContainer/Control/AttackUI")
InteractUI = NodePath("../CanvasLayer/Control/VBoxContainer/Control/InteractionUI")
SkillUI = NodePath("../CanvasLayer/Control/VBoxContainer/Control/SkillUI")
EquipmentUI = NodePath("../CanvasLayer/Control/VBoxContainer/Control/EquipmentUI")
ObserveUI = NodePath("../CanvasLayer/Control/VBoxContainer/Control/ObservationUI")
effecterVisualizer = NodePath("../CanvasLayer/Control/CardVisualizerFull")
avatarBase = ExtResource("2_pe3gp")
playervisual = ExtResource("3_ct1c8")
playerInfoDisplayHolder = NodePath("../CanvasLayer/Control/ScrollContainer/GridContainer")
playerInfoDisplayBase = ExtResource("9_et02w")
cardInterfaceBase = ExtResource("5_sm45i")
skillInterfaceBase = ExtResource("6_35quf")
equipmentInterfaceBase = ExtResource("7_1g4i5")

[node name="TileMapLayer" type="TileMapLayer" parent="Board"]
tile_set = ExtResource("3_igebr")

[node name="UnitOverlay" type="TileMapLayer" parent="Board"]
modulate = Color(1, 1, 1, 0.757)
tile_set = SubResource("TileSet_w8plm")
script = ExtResource("5_60abn")

[node name="Cursor" parent="Board" node_paths=PackedStringArray("map") instance=ExtResource("6_v0277")]
map = NodePath("../TileMapLayer")

[node name="Camera2D" type="Camera2D" parent="Board"]
offset = Vector2(300, 300)
script = ExtResource("7_3jsn3")
moveSpeed = 100

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 48.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="MoveButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16.53, 0)
layout_mode = 2
text = "Move"

[node name="CardButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16.53, 0)
layout_mode = 2
text = "Cards
"

[node name="AttackButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16.53, 0)
layout_mode = 2
text = "Attack
"

[node name="InteractionButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16.53, 0)
layout_mode = 2
text = "Interact"

[node name="SkillButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16.53, 0)
layout_mode = 2
text = "Skill"

[node name="Equipmentbutton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16.53, 0)
layout_mode = 2
text = "Equipment"

[node name="ObserveButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16.53, 0)
layout_mode = 2
text = "Observe"

[node name="DeselectButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(16.53, 0)
layout_mode = 2
text = "Deselect"

[node name="Control" type="Control" parent="CanvasLayer/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 60.665)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="MoveUI" type="Control" parent="CanvasLayer/Control/VBoxContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer/Control/MoveUI"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "ReturnToDefaultMove"

[node name="CardUI" type="Control" parent="CanvasLayer/Control/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer/Control/CardUI"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AttackUI" type="Control" parent="CanvasLayer/Control/VBoxContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer/Control/AttackUI"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "ReturnToDefaultAttack
"

[node name="InteractionUI" type="Control" parent="CanvasLayer/Control/VBoxContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer/Control/InteractionUI"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "ReturnToDefaultInteraction"

[node name="SkillUI" type="Control" parent="CanvasLayer/Control/VBoxContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer/Control/SkillUI"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "ReturnToDefaultSkill"

[node name="EquipmentUI" type="Control" parent="CanvasLayer/Control/VBoxContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer/Control/EquipmentUI"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "ReturnToDefaultEquipment"

[node name="ObservationUI" type="Control" parent="CanvasLayer/Control/VBoxContainer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/Control/VBoxContainer/Control/ObservationUI"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "ReturnToDefault"

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -0.599976
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control/ScrollContainer"]
custom_minimum_size = Vector2(1152, 0)
layout_mode = 2
size_flags_horizontal = 3
columns = 4

[node name="CardVisualizerFull" parent="CanvasLayer/Control" instance=ExtResource("13_60hkt")]
visible = false
layout_mode = 1

[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/MoveButton" to="Board" method="_modeMove"]
[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/CardButton" to="Board" method="_modeCard"]
[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/AttackButton" to="Board" method="_modeAttack"]
[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/InteractionButton" to="Board" method="_modeInteract"]
[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/SkillButton" to="Board" method="_modeSkill"]
[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/Equipmentbutton" to="Board" method="_modeEquipment"]
[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/ObserveButton" to="Board" method="_modeObserve"]
[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/DeselectButton" to="Board" method="_deselectActiveUnit"]
[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/Control/MoveUI/Button" to="Board" method="_modeDefault"]
[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/Control/AttackUI/Button" to="Board" method="_modeAttack"]
[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/Control/InteractionUI/Button" to="Board" method="_modeDefault"]
[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/Control/SkillUI/Button" to="Board" method="_modeDefault"]
[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/Control/EquipmentUI/Button" to="Board" method="_modeDefault"]
[connection signal="button_down" from="CanvasLayer/Control/VBoxContainer/Control/ObservationUI/Button" to="Board" method="_modeDefault"]
